cluster/eck/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: eck
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.jestenok.com
  rules:
    - host: kibana.jestenok.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-kb-http
                port:
                  number: 5601
